--- a/docs.settings.json
+++ b/docs.settings.json
@@ -3,6 +3,7 @@
 	"comment2": "Settings file must be in the same folder as the executable.",
 
 	"_comment_graphics_folder": "Configure the game's graphics folder location here. This is where the images will be saved to.",
+	"_comment_graphics_folder2": "On Windows, you can use either a slash ('/') or two backslashes ('\\') to separate folders. This applies to every setting in all configuration files.",
 	"graphics_folder": "D:/Programs/NHL Eastside Hockey Manager 2007/data/pictures",
 
 	"_comment_source_folder": "This is the folder where the script looks for images.",
@@ -17,8 +18,8 @@
 			"_comment_opacity": "How opaque the image should be. 1.0 results in no transparency, 0.0 creates fully transparent pictures.",
 			"opacity": 1.0,
 
-			"_comment_crop": "Determines whether the image is cropped when resizing to fit the target size. More details on this later.",
-			"crop": false,
+			"_comment_trim": "Determines whether the image is trimmed when resizing to fit the target size. More details on this later.",
+			"trim": false,
 
 			"_comment_padding": "Settings 'padding_top', 'padding_bottom', 'padding_left' and 'padding_right' take space from the image and replace it with transparency (for png images) or black (for jpg images).",
 			"_comment_padding2": "Note that they do not add to the total size of the image. Instead, the space for the padding is taken from the picture.",
@@ -47,12 +48,11 @@
 			"_comment_height": "The maximum vertical space in pixels that the image should take.",
 			"height": 768,
 
-			"_comment_crop": "Let's say we have an image the size of 3191px x 1803px.",
-			"_comment_crop2": "When 'crop' is set to true, this image would first be shrinked to the size of 1359px x 768px,",
-			"_comment_crop3": "and then pixels would be removed from top and/or bottom according to the image's crop_anchor setting defined in _config.json to fit the target dimensions of 1024px x 768px.",
-			"_comment_crop4": "If crop was set to false, the image would be resized to 1024px x 579px, preserving the full picture.",
-			"crop": true,
-
+			"_comment_trim": "Let's say we have an image the size of 3191px x 1803px.",
+			"_comment_trim2": "If trim was set to false, the source image would be resized to 1024px x 579px, preserving the full picture.",
+			"_comment_trim3": "When 'trim' is set to true, the source image would first be shrinked to the size of 1359px x 768px,",
+			"_comment_trim4": "and then pixels would be removed from left and/or right according to the image's 'image_centre_x' setting defined in _config.json to fit the target dimensions of 1024px x 768px.",
+			"trim": true,
 
 			"extension": "jpg",
 			"mask": {
@@ -69,7 +69,7 @@
 		"backgrounds/comps": {
 			"width": 1024,
 			"height": 768,
-			"crop": true,
+			"trim": true,
 			"extension": "jpg",
 			"mask": {
 				"image": "background_mask.jpg",
@@ -79,7 +79,7 @@
 		"backgrounds/nations/{folder}": {
 			"width": 1024,
 			"height": 768,
-			"crop": true,
+			"trim": true,
 			"extension": "jpg",
 			"mask": {
 				"image": "background_mask.jpg",
@@ -89,7 +89,7 @@
 		"backgrounds/nonplayers": {
 			"width": 1024,
 			"height": 768,
-			"crop": true,
+			"trim": true,
 			"extension": "jpg",
 			"mask": {
 				"image": "background_mask.jpg",
@@ -99,7 +99,7 @@
 		"backgrounds/players": {
 			"width": 1024,
 			"height": 768,
-			"crop": true,
+			"trim": true,
 			"extension": "jpg",
 			"mask": {
 				"image": "background_mask.jpg",
@@ -110,14 +110,14 @@
 			"width": 512,
 			"height": 98,
 			"opacity": 0.25,
-			"crop": true,
+			"trim": true,
 			"extension": "png"
 		},
 		"logos/comps/background": {
 			"width": 512,
 			"height": 98,
 			"opacity": 0.25,
-			"crop": true,
+			"trim": true,
 			"extension": "png"
 		},
 		"logos/clubs/huge/{folder}": {
@@ -163,7 +163,7 @@
 		"logos/clubs/medium/{folder}": {
 			"width": 120,
 			"height": 69,
-			"crop": true,
+			"trim": true,
 			"padding_bottom": 13,
 			"extension": "png"
 		},
@@ -175,14 +175,14 @@
 		"flags/medium/{folder}": {
 			"width": 120,
 			"height": 69,
-			"crop": true,
+			"trim": true,
 			"padding_bottom": 13,
 			"extension": "png"
 		},
 		"logos/clubs/small/{folder}": {
 			"width": 55,
 			"height": 21,
-			"crop": true,
+			"trim": true,
 			"extension": "png"
 		},
 		"logos/comps/small": {
