--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,6 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 
-settings.json
-default_settings.json
-_settings.json
+/settings.json
+/default_settings.json
+/_settings.json
